<resources>
    <string name="app_name">AEMA</string>
    <string name="a1">Anglo Eastern Maritime Academy</string>
    <string name="a2">Cadet Login</string>
    <string name="a3">Administrative Login</string>
    <string name="a4">Maintenance Team</string>
    <string name="title_activity_teamlogin">teamlogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>